--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,29 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Heading:</strong>
+<h1>
   <%= @post.heading %>
-</p>
+</h1>
 
 <p>
-  <strong>Body:</strong>
   <%= @post.body %>
 </p>
-
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<h2> Comments </h2>
+<%= @post.comments.each do |comment| %>
+	<div id="Comments">
+		<%= div_for comment do %>
+			<strong>
+				<%= h(comment.body) %>
+			</strong>
+			<p>
+				<%= time_ago_in_words(comment.created_at) %>
+			</p>
+		<% end %>
+	</div>
+<% end %>
+
+
+
+
